@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2004-2018  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2004-2021  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -62,10 +62,6 @@
 #include "thirdparty/cpc700reg.h"
 
 extern int verbose;
-
-// #ifdef UNSTABLE_DEVEL
-// #define debug fatal
-// #endif
 
 
 /*
